--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ APScheduler==3.6.3
 certifi==2020.12.5
 cffi==1.14.5
 cryptography==3.4.5
+numpy==1.20.1
+pandas==1.2.2
 pycparser==2.20
+python-dateutil==2.8.1
+python-dotenv==0.15.0
 python-telegram-bot==13.2
 pytz==2021.1
 six==1.15.0
